try to solve flex gap problem for mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -357,4 +357,10 @@
     .logos {
         row-gap: 4.8rem;
     }
+
+    /* flex box gap */
+    .social-links {
+        gap: 0;
+        justify-content: space-around;
+    }
 }
