--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fdf2e9;
+    background-color: rgba(253, 242, 233, 0.95);
     height: 9.6rem;
     padding: 0 4.8rem;
     position: relative;
+}
+
+.sticky {
     position: fixed;
     width: 100%;
     z-index: 1000;
+    height: 8rem;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .logo {
@@ -83,6 +89,7 @@
 .section-hero {
     background-color: #fdf2e9;
     padding: 4.8rem 0 9.6rem 0;
+    margin-top: 8rem;
 }
 .hero {
     max-width: 130rem;
